objects/Chain__c.object
<CustomObject>
    <description>Chain property rolls into</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Chain is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Chain_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Chain id account rolls into</description>
        <label>Expedia Chain Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Chain_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Id for the chain</description>
        <externalId>true</externalId>
        <label>External Chain Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Chain</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>